# VobSub2SRT

./: README  meson.build  meson_options.txt
data/: meson.build
data/completions/: meson.build  vobsub2srt
debian/: changelog  control
docs/: meson.build
src/: cmd_options.cc  langcodes.cc  meson.build  vobsub2srt.cc
